Remoção volume como feature

--- a/treinamento/bitcoin.ipynb
+++ b/treinamento/bitcoin.ipynb
@@ -1637,6 +1637,50 @@
    "source": [
     "Com a redução das métricas RMSE e MAE, foi escolhido utilizar o modelo GRU com as features de close e volume."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c55d58b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    }
+   ],
+   "source": [
+    "model_gru_cv.save('model_with_volume.h5')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e01a9e7e",
+   "metadata": {},
+   "source": [
+    "Na verdade, raciocinando um pouco, eu percebi que o volume apesar de ser útil para o passado, é inútil para o futuro pois não tem como eu acessar o volume futuro para tirar esses dados. Portanto, será utilizado apenas o Close."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ad9bb021",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    }
+   ],
+   "source": [
+    "model_gru_close.save('model_close.h5')"
+   ]
   }
  ],
  "metadata": {
